<resources>
  <string name="app_name">MyCake</string>
  <string name="username">Username</string>
  <string name="mycake">MY CAKE</string>
  <string name="login">Login</string>
  <string name="sign_up_tv"><u>Sign Up</u></string>
  <string name="login_tv"><u>Login</u></string>
  <string name="fullname">Full name</string>
  <string name="confirm_password">Confirm password</string>
  <string name="password">Password</string>
  <string name="app_logo">App Logo</string>
  <string name="hello_there">Hello there!</string>
  <string name="need_help">Need Help?</string>
  <string name="don_t_have_account">Don\'t have account?</string>
  <string name="create_your_account">Create your\naccount</string>
  <string name="create">Create</string>
  <string name="have_account">Have account? </string>
  <string name="nice_to_see_you_again">Nice to see you again</string>
  <string name="welcome">Welcome!</string>
  <string name="phone_number">Phone number</string>
  <string name="email">Email</string>
  <!--  <string name="emailPattern">[a-zA-Z0-9._-]+@[a-z]+\\.+[a-z]+</string>-->
  <string name="whiteSpaces">(?=\\s+$)</string>
  <string name="back_button">back button</string>
  <string name="my_profile">My Profile</string>
  <string name="profile_picture">Profile Picture</string>
  <string name="icon_log_out">icon log out</string>
  <string name="icon_back">icon back</string>
  <string name="platinum_member">Platinum Member</string>
  <string name="full_name">Full Name</string>
  <string name="edit_profile">Edit Profile</string>
  <string name="wishlist">Wishlist</string>
  <string name="order_history">Order History</string>
  <string name="settings">Settings</string>
  <string name="help_center">Help Center</string>
  <string name="divider">Divider</string>
  <string name="message">message</string>
  <string name="home_menu">home menu</string>
  <string name="packaging">packaging</string>
  <string name="update">Update</string>
</resources>