<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".RegisterActivity"
  android:background="@color/black_bg">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:layout_marginStart="50dp"
    android:layout_marginEnd="50dp"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
      android:id="@+id/textView1"
      android:layout_width="match_parent"
      android:layout_height="160dp"
      android:layout_marginTop="16dp"
      android:fontFamily="@font/bold"
      android:gravity="left"
      android:text="Create your\naccount"
      android:textColor="@color/white"
      app:autoSizeTextType="uniform" />

    <EditText
      android:id="@+id/et_full_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:autofillHints="Fullname"
      android:background="@drawable/input_field"
      android:fontFamily="@font/regular"
      android:hint="@string/fullname"
      android:inputType="text"
      android:minHeight="48dp"
      android:textColor="@color/white"
      android:textColorHint="@color/white" />

    <EditText
      android:id="@+id/et_username"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:autofillHints="username"
      android:background="@drawable/input_field"
      android:fontFamily="@font/regular"
      android:hint="@string/username"
      android:inputType="text"
      android:minHeight="48dp"
      android:textColor="@color/white"
      android:textColorHint="@color/white" />

    <EditText
      android:id="@+id/et_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:autofillHints="email"
      android:background="@drawable/input_field"
      android:fontFamily="@font/regular"
      android:hint="@string/email"
      android:inputType="textEmailAddress"
      android:minHeight="48dp"
      android:textColor="@color/white"
      android:textColorHint="@color/white" />

    <EditText
      android:id="@+id/et_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:autofillHints="password"
      android:background="@drawable/input_field"
      android:fontFamily="@font/regular"
      android:hint="@string/password"
      android:inputType="textPassword"
      android:minHeight="48dp"
      android:textColor="@color/white"
      android:textColorHint="@color/white" />

    <EditText
      android:id="@+id/et_confirm_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:autofillHints="email"
      android:background="@drawable/input_field"
      android:fontFamily="@font/regular"
      android:hint="@string/confirm_password"
      android:inputType="textPassword"
      android:minHeight="48dp"
      android:textColor="@color/white"
      android:textColorHint="@color/white" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginBottom="50dp"
      android:orientation="horizontal">

      <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:fontFamily="@font/bold"
        android:text="Create"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold" />

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/regular"
        android:gravity="right"
        android:text="Need Help?"
        android:textColor="@color/yellow"
        android:textSize="22sp" />

    </LinearLayout>

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="horizontal">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="40dp"
      android:layout_marginBottom="35dp"
      android:fontFamily="@font/regular"
      android:gravity="bottom"
      android:text="Have account? "
      android:textColor="@color/white"
      android:textSize="18sp" />

    <TextView
      android:id="@+id/tv_register"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="35dp"
      android:fontFamily="@font/bold"
      android:gravity="bottom"
      android:text="@string/login_tv"
      android:textColor="@color/white"
      android:textSize="18sp" />

  </LinearLayout>







</RelativeLayout>